# enbot

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  HOWTO.md  IDEA.md  README.md  TECHNICAL_SPECIFICATION.md  docker-compose.yml  docker-save.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_pythonpath.sh  words_example.txt
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  emojis_list.md
scripts/: deploy.sh  setup_dev.sh  setup_pythonpath.sh
src/enbot/: __main__.py  app.py  bot.py  config.py  logging_config.py  monitoring.py
src/enbot/models/: base.py  cycle_models.py  models.py  training_models.py
src/enbot/services/: content_generator.py  cycle_service.py  learning_service.py  notification_service.py  scheduler_service.py  training_methods.py  user_service.py  word_service.py
src/enbot/tests/: conftest.py  test_app.py  test_bot.py  test_config.py  test_content_generator.py  test_learning_service.py  test_models.py  test_notification_service.py  test_scheduler_service.py  test_user_service.py  test_word_service.py
