[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enbot"
version = "0.1.0"
description = "A Telegram bot for English learning"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=20.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["enbot*"]
namespaces = false 